--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
  # We must not use the mongo plugin in its tests.
-addopts = -p no:mongo --max-slave-restart=0
+addopts = --max-slave-restart=0 --showlocals --verbose 
