replace pep8 with pycodestyle

--- a/pylama.ini
+++ b/pylama.ini
@@ -3,7 +3,7 @@
 # D212 - Multi-line docstring summary should start at the first line [pydocstyle] - Opposite of D213
 
 [pylama]
-linters = pep8,pyflakes,pydocstyle
+linters = pycodestyle,pyflakes,pydocstyle
 skip = docs/*,\
     build/*
 
