--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
 python:
-- '2.7'
-- '3.3'
-- '3.4'
-- '3.5'
-- '3.6'
+- 2.7
+- 3.4
+- 3.5
+- 3.6
 - pypy
 - pypy3
 branches:
@@ -15,8 +14,6 @@ install:
 - pip install -e .[tests] coveralls wheel
 script:
 - py.test -n 0 --cov src/pytest_mongo tests
-- pylama
-- pyroma .
 after_success:
 - coveralls
 jobs:
@@ -24,6 +21,17 @@ jobs:
     - stage: xdist
       python: 3.6
       script: py.test -n 1 --cov src/pytest_mongo tests
+    - stage: linters
+      python: 3.6
+      install:
+      - pip install -r requirements-lint.txt
+      - pip install .[tests]
+      script:
+      - pycodestyle
+      - pydocstyle
+      - pylint pytest_mongo tests
+      - pyroma .
+      after_success: skip
     - stage: deploy
       python: 3.6
       if: tag IS present
