--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,12 +1,6 @@
 # test runs requirements (versions we'll be testing against) - automatically updated by requires.io
 coverage==4.5.2 # pytest-cov
-pylama==7.6.6
-pyflakes==2.0.0
-pydocstyle==3.0.0
-pycodestyle==2.4.0
-mccabe==0.6.1
-pyroma==2.4
 mirakuru==1.1.0
 port-for==0.4
 pymongo==3.7.2
-pytest==4.0.0 #  rq.filter: !=2.9.0,!=2.9.1,!=2.9.2
+pytest==4.0.0
