--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -6,4 +6,4 @@ port-for==0.4
 pymongo==3.9.0
 pytest==5.3.0; python_version>'3.4'
 pytest>=4.4.0; python_version<='3.4' # rq.filter: <5.0.0
-
+-e .[tests]
