Rely on get_port functionality from port_for

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,9 +4,9 @@ commit = True
 tag = True
 message = "Release {new_version}"
 
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+[bumpversion:file:setup.cfg]
+search = version = {current_version}
+replace = version = {new_version
 
 [bumpversion:file:src/pytest_mongo/__init__.py]
 
@@ -14,6 +14,6 @@ replace = version='{new_version}'
 
 [bumpversion:file:CHANGES.rst]
 search = unreleased
-	-------
+	----------
 replace = {new_version}
-	-------
+	----------
