--- a/setup.cfg
+++ b/setup.cfg
@@ -29,13 +29,13 @@ classifiers =
 [options]
 zip_safe = False
 include_package_data = True
-python_requires = >= 3.6
+python_requires = >= 3.7
 packages = find:
 package_dir =
     =src
 install_requires =
     pytest
-    port-for
+    port-for>=0.6.0
     mirakuru
     redis
 
