--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,11 +6,9 @@ message = "Release {new_version}"
 
 [bumpversion:file:setup.cfg]
 search = version = {current_version}
-replace = version = {new_version
+replace = version = {new_version}
 
 [bumpversion:file:src/pytest_mongo/__init__.py]
-
-[bumpversion:file:README.rst]
 
 [bumpversion:file:CHANGES.rst]
 search = unreleased
