--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -12,4 +12,4 @@ on:
 
 jobs:
   lint:
-    uses: fizyk/actions-reuse/.github/workflows/linters-python.yml@main
+    uses: fizyk/actions-reuse/.github/workflows/linters-python.yml@v1.3.2
