--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -5,7 +5,7 @@ on:
       - v*
 jobs:
   build-n-publish:
-    uses: fizyk/actions-reuse/.github/workflows/pypi.yml@main
+    uses: fizyk/actions-reuse/.github/workflows/pypi.yml@v1.3.2
     with:
       publish: true
     secrets:
