--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -12,4 +12,8 @@ on:
 
 jobs:
   lint:
-    uses: fizyk/actions-reuse/.github/workflows/linters-python.yml@v1.3.2
+    uses: fizyk/actions-reuse/.github/workflows/linters-python.yml@v2.1.2
+    with:
+      pydocstyle: true
+      pycodestyle: true
+      black: true
