--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,19 +34,21 @@ jobs:
         echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb.list
         sudo apt-get update -o Dir::Etc::sourcelist="/etc/apt/sources.list.d/mongodb.list" -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
         sudo apt-get install -y mongodb-org
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-test.txt
     - name: Run test
-      run: |
-        pytest -n 0 --cov-report=xml
+      uses: fizyk/actions-reuse/.github/actions/pipenv@v2.1.2
+      with:
+        python-version: ${{ matrix.python-version }}
+        pipenv-install-options: "--skip-lock"
+        command: pytest -n 0 --cov-report=xml
     - name: Run xdist test
-      run: |
-        pytest -n 1 --cov-report=xml:coverage-xdist.xml
+      uses: fizyk/actions-reuse/.github/actions/pipenv@v2.1.2
+      with:
+        python-version: ${{ matrix.python-version }}
+        pipenv-install-options: "--skip-lock"
+        command: pytest -n 1 --cov-report=xml:coverage-xdist.xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3.1.1
       with:
         flags: linux
         env_vars: OS, PYTHON
-        fail_ci_if_error: true
+        fail_ci_if_error: false
