--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+pytest = "==7.2.0"
+mirakuru = "==2.4.2"
+port-for = "==0.6.2"
+pymongo = "==4.3.2"
 
 [dev-packages]
 towncrier = "==22.12"
+pycodestyle = "==2.9.1"
+pydocstyle = "==6.1.1"
+black = "==22.10.0"
+pytest-cov = "==4.0.0"
+pytest-xdist = "==3.0.2"
