--- a/setup.cfg
+++ b/setup.cfg
@@ -31,9 +31,7 @@ classifiers =
 zip_safe = False
 include_package_data = True
 python_requires = >= 3.7
-packages = find:
-package_dir =
-    =src
+packages = pytest_mongo
 install_requires =
     pytest
     port-for>=0.6.0
@@ -44,9 +42,6 @@ install_requires =
 [options.entry_points]
 pytest11 =
     pytest_mongo = pytest_mongo.plugin
-
-[options.packages.find]
-where = src
 
 [options.extras_require]
 tests =
