--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,62 @@
+[project]
+name = "pytest-mongo"
+version = "2.1.1"
+description = "MongoDB process and client fixtures plugin for Pytest."
+readme = "README.rst"
+keywords = ["tests", "pytest", "fixture", "mongodb", "mongo"]
+license = {file = "LICENSE"}
+authors = [
+    {name = "Grzegorz Śliwiński", email = "fizyk+pypi@fizyk.dev"}
+]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Environment :: Web Environment",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3 :: Only",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Testing",
+    "Framework :: Pytest",
+]
+dependencies = [
+    "pytest >= 6.2",
+    "port-for >= 0.6.0",
+    "mirakuru",
+    "pymongo",
+]
+requires-python = ">= 3.7"
+
+[project.urls]
+"Source" = "https://github.com/ClearcodeHQ/pytest-mongo"
+"Bug Tracker" = "https://github.com/ClearcodeHQ/pytest-mongo/issues"
+"Changelog" = "https://github.com/ClearcodeHQ/pytest-mongo/blob/v2.1.1/CHANGES.rst"
+
+[project.entry-points."pytest11"]
+pytest_mongo = "pytest_mongo.plugin"
+
 [build-system]
-requires = ["setuptools >= 40.6.0", "wheel"]
+requires = ["setuptools >= 61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+zip-safe = true
+
+[tool.setuptools.packages.find]
+include = ["pytest_mongo*"]
+exclude = ["tests*"]
+namespaces = false
+
+[tool.pytest.ini_options]
+xfail_strict=true
+addopts = "--max-worker-restart=0 --showlocals --verbose --cov"
+testpaths = "tests"
 
 [tool.black]
 line-length = 80
@@ -40,7 +96,7 @@ showcontent = true
 
 [tool.towncrier.fragment.misc]
 name = "Miscellaneus"
-showcontent = true
+showcontent = false
 
 [tool.tbump.version]
 current = "2.1.1"
