--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 pytest = "==7.4.0"
 mirakuru = "==2.5.1"
-port-for = "==0.7.0"
+port-for = "==0.7.1"
 pymongo = "==4.4.1"
 
 [dev-packages]
@@ -15,3 +15,4 @@ black = "==23.3.0"
 pytest-cov = "==4.1.0"
 pytest-xdist = "==3.3.1"
 ruff = "==0.0.278"
+mypy = "==1.4.1"
