--- a/Pipfile
+++ b/Pipfile
@@ -17,3 +17,4 @@ pytest-xdist = "==3.3.1"
 ruff = "==0.0.278"
 mypy = "==1.4.1"
 tbump = "==6.10.0"
+rstcheck = {version = "==6.1.2", extras = ["sphinx"]}
