--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,40 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        python-version: [3.8, 3.9, "3.10", "3.11", "3.12", pypy-3.9]
-    env:
-      OS: ubuntu-latest
-      PYTHON: ${{ matrix.python-version }}
-    # Service containers to run with `container-job`
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install MongoDB
-      uses: ankane/setup-mongodb@v1
-      with:
-        mongodb-version: 6.0
-    - name: Run test
-      uses: fizyk/actions-reuse/.github/actions/pipenv@v2.4.2
-      with:
-        python-version: ${{ matrix.python-version }}
-        command: pytest -n 0 --cov-report=xml
-    - name: Run xdist test
-      uses: fizyk/actions-reuse/.github/actions/pipenv@v2.4.2
-      with:
-        python-version: ${{ matrix.python-version }}
-        command: pytest -n 1 --cov-report=xml:coverage-xdist.xml
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4.1.0
-      with:
-        flags: linux
-        env_vars: OS, PYTHON
-        fail_ci_if_error: false
+  mongo_7:
+    uses: ./.github/workflows/single-mongo.yml
+    with:
+      mongo: 7.0
+  mongo_6:
+#    needs: [mongo_7]
+    uses: ./.github/workflows/single-mongo.yml
+    with:
+      mongo: 6.0
+      python-versions: '["3.9", "3.10", "3.11", "3.12"]'
