--- a/.github/workflows/single-mongo.yml
+++ b/.github/workflows/single-mongo.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       python-versions:
         description: 'Supported python versions'
-        default: '["3.8", "3.9", "3.10", "3.11", "3.12", "pypy-3.9"]'
+        default: '["3.9", "3.10", "3.11", "3.12", "pypy-3.10"]'
         required: false
         type: string
       mongo:
